<resources>
    <string name="app_name">MapApp</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="city">Maputo</string>

    <string name="distancia_texto">Distância</string>
    <string name="distancia">0 km</string>

    <string name="tempo_estimado_texto">Tempo Estimado</string>
    <string name="tempo_estimado">0 min</string>



    <string name="google_maps_key">AIzaSyDQDEPMcXgETn-yN__zU2gSYHfTGfk9pr4</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


    <string name="facebook_app_id">183055251201100</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">56789</string>


</resources>