<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="30dp"
    tools:context=".MainActivity">

    <Toolbar
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:background="@drawable/gradient_card"
        android:gravity="center"
        android:paddingHorizontal="20dp">

        <TextView
            android:id="@+id/currentLocation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:background="@drawable/location_shape"
            android:drawableLeft="@drawable/baseline_where_to_vote_24"
            android:gravity="center"
            android:paddingHorizontal="14dp"
            android:paddingVertical="10dp"
            android:text="@string/city"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/location_shape"
            android:drawableLeft="@drawable/baseline_person_24"

            android:gravity="center"
            android:paddingHorizontal="14dp"
            android:text="Logout"
            android:textAllCaps="false" />
    </Toolbar>

    <!--         Map fragment   -->
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        tools:context=".MainActivity" />


    <!-- O cartão de informações   -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:weightSum="4"
        android:background="@drawable/gradient_card"
        android:elevation="3dp"
        android:gravity="center"
        android:orientation="horizontal">

        <!-- Distância -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/route_vector"
                app:tint="@color/color_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/distancia"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distancia" />

                <TextView
                    android:textSize="@dimen/subtitle_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/distancia_texto" />
            </LinearLayout>
        </LinearLayout>

        <!--Tempo estimado -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/icon_width"
                android:layout_height="@dimen/icon_height"
                android:src="@drawable/clock_vector"
                app:tint="@color/color_1" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tempo_estimado"
                    android:textStyle="bold"
                    android:textSize="@dimen/title_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempo_estimado" />

                <TextView
                    android:textSize="@dimen/subtitle_text_size"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tempo_estimado_texto" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
